# llm-benchmark-in-session

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.en.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: benchmark.yml  pages.yml
config/: test_cases.json  test_cases.schema.json
raw_answers/: 01_smoke_identity.md  02_smoke_bilingual.md  03_structured_extraction.md  04_long_summary.md  05_logic_reasoning.md  06_math_integral.md  07_code_generation.md  08_multi_turn_context.md  09_prompt_injection.md  10_tool_use_planning.md  11_code_review.md  12_emoji_robustness.md  13_bayesian_probability.md  14_unauthorized_tool.md  15_indirect_injection.md  16_needle_haystack.md  17_style_transfer.md  18_find_secrets.md  19_debug_incident.md  20_user_complaint.md  21_classical_chinese.md  22_japanese_reading.md  23_calibration.md
reports/cases/: cases_results.md  (+2 more)
scripts/: add_case.py  adversarial.py  agent_workflow.py  auto_generate.py  bench.py  calibration.py  code_agent.py  compare.py  consistency.py  cost.py  cost_quality.py  dashboard.py  data_analysis.py  difficulty.py  failure_analysis.py  grade.py  hallucination.py  injection_gradient.py  judge.py  judge_bias.py  leaderboard.py  meta_eval.py  multimodal.py  needle_haystack_extreme.py  paper_reproduction.py  physics_check.py  radar.py  real_world_compare.py  repro.py  rewrite_robustness.py  significance.py  spatial_reasoning.py  validate.py  web_design.py
templates/: new_test_case.json
tests/: test_calibration.py  test_difficulty.py  test_grade.py  test_injection_gradient.py
(+37 files in other folders)
