[project]
name = "minimax-m3-benchmark"
version = "1.3.0"
description = "In-session benchmark for LLM models running inside Claude Code"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "shaozheng0503"}]
keywords = ["llm", "benchmark", "evaluation", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
benchmark-grade = "scripts.grade:main"
benchmark-bench = "scripts.bench:main"
benchmark-judge = "scripts.judge:main"
benchmark-compare = "scripts.compare:main"
benchmark-radar = "scripts.radar:main"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
